--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,5 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
-    ext.kotlin_version = "1.5.31"
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath "com.android.tools.build:gradle:4.2.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
-}
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
+plugins {
+    id 'com.android.application' version '7.4.0-alpha09' apply false
+    id 'com.android.library' version '7.4.0-alpha09' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
 }
